# vleue_navigator

./: .gitignore  Cargo.toml  LICENSE  README.md  parry2d.rs
.github/workflows/: ci.yml  deploy.yml
assets/meshes/: my_level.glb  my_level_nav.glb  navmesh.glb  plane_with_holes.glb
assets/recast/: detail_mesh.json  dungeon.glb  poly_mesh.json
examples/: auto_layers.rs  auto_navmesh.rs  auto_navmesh_aabb.rs  auto_navmesh_avian2d.rs  auto_navmesh_avian3d.rs  auto_navmesh_avian3d_inclined.rs  auto_navmesh_parry2d.rs  auto_navmesh_parry2d_compound.rs  auto_navmesh_primitive.rs  demo.rs  gltf.rs  gltf_avian3d.rs  layers.rs  layers_basic.rs  layers_inclined.rs  lines.rs  many.rs  many_navmesh_parry2d.rs  moving.rs  plane.rs  polyanya.rs  primitive_3d.rs  random_obstacles.rs  recast.rs
examples/helpers/: agent.rs  agent2d.rs  agent3d.rs  camera_controller.rs  ui.rs
examples/interactive/: Cargo.toml
examples/interactive/src/: build_navmesh.rs  helpers.rs  main.rs  ui.rs
examples/physics_xpbd/: Cargo.toml
examples/physics_xpbd/src/: build_navmesh.rs  main.rs  ui.rs
src/: asset_loaders.rs  lib.rs  updater.rs
src/obstacles/: aabb.rs  avian2d.rs  avian3d.rs  cached.rs  mod.rs  primitive.rs
src/obstacles/parry2d/: error.rs  math.rs  mod.rs  primitives.rs  shape.rs  transform.rs
src/obstacles/parry2d/math/: mod.rs  single.rs
wasm/: auto_navmesh.html  auto_navmesh_aabb.html  auto_navmesh_primitive.html  demo.html  example.html  gltf.html  index.html  interactive.html  lines.html  many.html  moving.html  physics_xpbd.html  primitive_3d.html  random_obstacles.html  random_obstacles_bg.wasm.d.ts  site.webmanifest
