[package]
name = "vleue_navigator"
version = "0.8.0"
authors = ["François Mockers <francois.mockers@vleue.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["pathfinding", "bevy", "navmesh", "navigation"]
readme = "README.md"
description = "Navmesh plugin for Bevy"
repository = "https://github.com/vleue/vleue_navigator"
homepage = "https://github.com/vleue/vleue_navigator"
documentation = "https://docs.rs/vleue_navigator"
categories = ["game-development"]

[dependencies]
itertools = "0.13"
tracing = { version = "0.1", optional = true }

[dependencies.avian2d]
version = "0.1"
features = ["2d", "f32", "parry-f32"]
default-features = false
optional = true

[dependencies.avian3d]
version = "0.1"
features = ["3d", "f32", "parry-f32"]
default-features = false
optional = true

[dependencies.polyanya]
version = "0.7.1"
git = "https://github.com/vleue/polyanya"

[dependencies.bevy]
version = "0.14.0"
features = ["bevy_render", "bevy_asset"]
default-features = false

[dev-dependencies]
rand = "0.8"

[dev-dependencies.bevy]
version = "0.14.0"
features = [
    "bevy_ui",
    "bevy_text",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_gizmos",
    # Required for TonyMcMapface
    "tonemapping_luts",
    "multi_threaded",
    "bevy_state",
    "default_font",
]
default-features = false

[features]
default = ["debug-with-gizmos"]
linuxci = ["bevy/x11"]
debug-with-gizmos = ["bevy/bevy_gizmos"]

[[example]]
name = "auto_navmesh_avian2d"
required-features = ["avian2d"]

[[example]]
name = "auto_navmesh_avian3d"
required-features = ["avian3d"]
