[package]
name = "vleue_navigator"
version = "0.11.1"
authors = ["François Mockers <francois.mockers@vleue.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["pathfinding", "bevy", "navmesh", "navigation"]
readme = "README.md"
description = "Navmesh plugin for Bevy"
repository = "https://github.com/vleue/vleue_navigator"
homepage = "https://github.com/vleue/vleue_navigator"
documentation = "https://docs.rs/vleue_navigator"
categories = ["game-development"]

[dependencies]
itertools = "0.13"
tracing = { version = "0.1", optional = true }

[dependencies.avian2d]
version = "0.2"
features = ["2d", "f32", "parry-f32"]
default-features = false
optional = true

[dependencies.avian3d]
version = "0.2"
features = ["3d", "f32", "parry-f32"]
default-features = false
optional = true

[dependencies.polyanya]
version = "0.12.0"

[dependencies.bevy]
version = "0.16.0-rc.3"
features = ["bevy_render", "bevy_asset"]
default-features = false

[dev-dependencies]
rand = "0.8"

[dev-dependencies.bevy]
version = "0.16.0-rc.3"
features = [
    "bevy_window",
    "bevy_ui",
    "bevy_text",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_scene",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_gizmos",
    "bevy_log",
    # Required for TonyMcMapface
    "tonemapping_luts",
    "multi_threaded",
    "bevy_state",
    "default_font",
    # to build on linux
    "x11",
    "animation", # TODO: remove
]
default-features = false

[patch.crates-io]
avian2d = { git = "https://github.com/Jondolf/avian.git" }
avian3d = { git = "https://github.com/Jondolf/avian.git" }

[features]
default = ["debug-with-gizmos"]
debug-with-gizmos = ["bevy/bevy_gizmos"]
detailed-layers = ["polyanya/detailed-layers"]
avian2d = ["dep:avian2d"]
avian3d = ["dep:avian3d"]

[[example]]
name = "auto_navmesh_avian2d"
required-features = ["avian2d"]

[[example]]
name = "auto_navmesh_avian3d"
required-features = ["avian3d"]

[[example]]
name = "auto_navmesh_avian3d_inclined"
required-features = ["avian3d"]

[[example]]
name = "gltf_avian3d"
required-features = ["avian3d", "avian3d/collider-from-mesh"]

[[example]]
name = "layers"
required-features = ["avian3d", "detailed-layers"]

[[example]]
name = "layers_basic"
required-features = ["avian3d"]

[[example]]
name = "layers_inclined"
required-features = ["avian3d", "detailed-layers"]

[package.metadata.docs.rs]
features = ["detailed-layers"]
