[package]
name = "physics_xpbd"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "default_font",
    "tonemapping_luts",
    "ktx2",
    "zstd",
]

[dependencies]
bevy_pathmesh = { path = "../../" }
rand = "0.8"
bevy_vector_shapes = "0.6"
bevy_xpbd_3d = "0.3"
